changing to horizontal menu and fixing corresponding controller test

--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -9,28 +9,25 @@
 
 	<body class='<%= controller.controller_name %>'>
 
+	<div id=all>
 		<div id="banner">
 			<%= image_tag("logo.png") %>
 			<%= @page_title || "Pragmatic Bookshelf" %>
 		</div>
 
-		<div id="columns">
+		<nav id="menu">
+			<ul>
+				<li><a href="http://www....">Home</a></li>
+				<li><a href="http://www..../faq">Questions</a></li>
+				<li><a href="http://www..../news">News</a></li>
+				<li><a href="http://www..../contact">Contact</a></li>
+			</ul>
+		</nav>
 
-			<div id="side">
-				<ul>
-					<li><a href="http://www....">Home</a></li>
-					<li><a href="http://www..../faq">Questions</a></li>
-					<li><a href="http://www..../news">News</a></li>
-					<li><a href="http://www..../contact">Contact</a></li>
-				</ul>
-			</div>
-
-			<div id="main">
-				<%= yield %>
-			</div>
-
+		<div id="main">
+			<%= yield %>
 		</div>
-
+		</div>
 	</body>
 
 </html>
