--- a/depot/app/assets/stylesheets/application.css.scss
+++ b/depot/app/assets/stylesheets/application.css.scss
@@ -15,53 +15,64 @@
  *= require_products
  */
  
-#banner {
-	background: #9c9;
-	padding: 10px;
-	border-bottom: 2px solid;
-	font: small-caps 40px/40px "Times New Roman", serif;
-	color: #282;
-	text-align: center;
-	
-	img {
-		float: left;
+#all{
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+
+
+	#banner {
+		background: #9c9;
+		padding: 10px;
+		border-bottom: 2px solid;
+		font: small-caps 40px/40px "Times New Roman", serif;
+		color: #282;
+		text-align: center;
+		
+		img {
+			float: left;
+		}
 	}
-}
 
-#notice {
-	color: #000 !important;
-	border: 2px solid red;
-	padding: 1em;
-	margin-bottom: 2em;
-	background-color: #f0f0f0;
-	font: bold smaller sans-serif;
-}
+	#notice {
+		color: #000 !important;
+		border: 2px solid red;
+		padding: 1em;
+		margin-bottom: 2em;
+		background-color: #f0f0f0;
+		font: bold smaller sans-serif;
+	}
 
-#columns {
-	background: #141;
 	#main {
-		margin-left: 17em;
 		padding: 1em;
 		background: white;
 	}
-	
-	#side {
-		float: left;
-		padding: 1em 2em;
-		width: 13em;
-		background: #141;
-	
-		ul {
-			padding: 0;
-			
-			li {
-				list-style: none;
-				
-				a {
-					color: #bfb;
-					font-size: small;
-				}
-			}
-		}
+
+	#menu ul {
+	  padding:0px;
+	  margin:0px;
+	  background-color:#EDEDED;
+	  list-style:none;
+	}
+
+	#menu ul li { 
+		display: inline; 
+	}
+
+	#menu ul li a {
+	  padding: 2px 10px;
+	  display: inline-block;
+	   
+	  /* visual do link */
+	  background-color:#EDEDED;
+	  color: #333;
+	  text-decoration: none;
+	  border-bottom:3px solid #EDEDED;
+	}
+
+	#menu ul li a:hover {
+	  background-color:#D6D6D6;
+	  color: #6D6D6D;
+	  border-bottom:3px solid #EA0000;
 	}
 }
