--- a/depot/app/assets/stylesheets/products.css.scss
+++ b/depot/app/assets/stylesheets/products.css.scss
@@ -1,13 +1,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .products {
+  
   table {
-	border-collapse: collapse;
+	  border-collapse: collapse;
   }
 
   table tr td {
-	padding: 5px;
-    vertical-align: top;
+	  padding: 5px;
   }
 
   .list_image {
@@ -16,34 +16,34 @@
   }
 
   .list_description {
-	width: 60%;
-	
-	dl {
-		margin: 0;
-	}
+  	width: 100%;
+  	
+  	dl {
+  		margin: 0;
+  	}
 
-	dt {
-		color: 			#244;
-		font-weight: 	bold;
-		font-size: 		larger;
-	}
+  	dt {
+  		color: 			#244;
+  		font-weight: 	bold;
+  		font-size: 		larger;
+  	}
 
-	dd {
-		margin: 0;
-	}
+  	dd {
+  		margin: 0;
+  	}
   }
 
   .list_actions {		
-	font-size: 		x-small;
-	text-align: 	right;
-	padding-left: 	1em;
+	  text-align: 	right;
   }
 
   .list_line_even {
-     background: #e0f8f8;
+    background: #e0f8f8;
   }
 
   .list_line_odd {
-  	  background: #f8b0f8;
+  	  background: #EDEDED;
   }
+
+
 }
