--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -13,14 +13,13 @@
       </dl>
     </td>
     <td class="list_actions">
-      <%= link_to 'Show', product %><br/>
-      <%= link_to 'Edit', edit_product_path(product) %><br/>
-      <%= link_to 'Destroy', product, method: :delete,
-              data: { confirm: 'Are you sure?' } %>
+      <%= button_to 'Show', product %>
+      <%= button_to 'Edit', edit_product_path(product) %>
+      <%= button_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
     </td>
   </tr>
 <% end %>
 </table>
 <br />
 
-<%= link_to 'New Product', new_product_path %>
+<%= button_to 'New Product', new_product_path %>
