--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -13,13 +13,13 @@
       </dl>
     </td>
     <td class="list_actions">
-      <%= button_to 'Show', product %>
-      <%= button_to 'Edit', edit_product_path(product) %>
-      <%= button_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= button_to 'Show', product, :method => :get %>
+      <%= button_to 'Edit', edit_product_path(product), :method => :get %>
+      <%= button_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, :method => :get %>
     </td>
   </tr>
 <% end %>
 </table>
 <br />
 
-<%= button_to 'New Product', new_product_path %>
+<%= button_to 'New Product', new_product_path, :method => :get %>
