--- a/depot/app/views/products/_form.html.erb
+++ b/depot/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, :url=>{:action=>'create'}, :html=>{:multipart=>true}) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -15,18 +15,24 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description, rows: 6 %>
   </div>
+  
   <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
+      <%=f.label :image_url %><br>
+      <%= f.file_field :image_file %>
+      <%= f.text_field :image_url, :value => :image_url %>
+
   </div>
+
   <div class="field">
     <%= f.label :price %><br>
     <%= f.text_field :price %>
   </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
