--- a/depot/app/views/products/_form.html.erb
+++ b/depot/app/views/products/_form.html.erb
@@ -24,7 +24,7 @@
   <div class="field">
       <%=f.label :image_url %><br>
       <%= f.file_field :image_file %>
-      <%= f.text_field :image_url, :value => :image_url %>
+      <%= f.hidden_field :image_url, :value => :image_url %>
 
   </div>
 
