--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
     <td class="list_actions">
       <%= button_to 'Show', product, :method => :get %>
       <%= button_to 'Edit', edit_product_path(product), :method => :get %>
-      <%= button_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, :method => :get %>
+      <%= button_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
     </td>
   </tr>
 <% end %>
