Translation of views and error messages to pt

--- a/depot/app/views/carts/edit.html.erb
+++ b/depot/app/views/carts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing cart</h1>
+<h1>Editar Carrinho</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cart %> |
-<%= link_to 'Back', carts_path %>
+<%= link_to 'Detalhes', @cart %> |
+<%= link_to 'Voltar', carts_path %>
