--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -12,15 +12,15 @@
 	<div id=all>
 		<div id="banner">
 			<%= image_tag("logo.png") %>
-			<%= @page_title || "Pragmatic Bookshelf" %>
+			<%= @page_title || "Estante Pragmática" %>
 		</div>
 
 		<nav id="menu">
 			<ul>
-				<li><a href="http://www....">Home</a></li>
-				<li><a href="http://www..../faq">Questions</a></li>
-				<li><a href="http://www..../news">News</a></li>
-				<li><a href="http://www..../contact">Contact</a></li>
+				<li><a href="http://www....">Início</a></li>
+				<li><a href="http://www..../faq">Perguntas</a></li>
+				<li><a href="http://www..../news">Notícias</a></li>
+				<li><a href="http://www..../contact">Contato</a></li>
 			</ul>
 		</nav>
 
