--- a/depot/app/views/line_items/edit.html.erb
+++ b/depot/app/views/line_items/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @line_item %> |
-<%= link_to 'Back', line_items_path %>
+<%= link_to 'Detalhes', @line_item %> |
+<%= link_to 'Voltar', line_items_path %>
