--- a/depot/app/views/carts/index.html.erb
+++ b/depot/app/views/carts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing carts</h1>
+<h1>Carrinhos de Compras</h1>
 
 <table>
   <thead>
@@ -10,9 +10,9 @@
   <tbody>
     <% @carts.each do |cart| %>
       <tr>
-        <td><%= link_to 'Show', cart %></td>
-        <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
-        <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Detalhes', cart %></td>
+        <td><%= link_to 'Editar', edit_cart_path(cart) %></td>
+        <td><%= link_to 'Excluir', cart, method: :delete, data: { confirm: 'Tem certeza que deseja excluir?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -20,4 +20,4 @@
 
 <br>
 
-<%= link_to 'New Cart', new_cart_path %>
+<%= link_to 'Novo carrinho', new_cart_path %>
