--- a/depot/app/views/carts/show.html.erb
+++ b/depot/app/views/carts/show.html.erb
@@ -19,4 +19,4 @@
 	</tr>
 </table>
 
-<%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= button_to 'Esvaziar Carrinho', @cart, method: :delete, data: { confirm: 'Está certo que deseja esvaziar seu carrinho?' } %>
