--- a/depot/app/views/line_items/index.html.erb
+++ b/depot/app/views/line_items/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing line_items</h1>
+<h1>Listagem de Ítens</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Product</th>
+      <th>Productos</th>
       <th>Cart</th>
       <th colspan="3"></th>
     </tr>
@@ -14,9 +14,9 @@
       <tr>
         <td><%= line_item.product %></td>
         <td><%= line_item.cart %></td>
-        <td><%= link_to 'Show', line_item %></td>
-        <td><%= link_to 'Edit', edit_line_item_path(line_item) %></td>
-        <td><%= link_to 'Destroy', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Detalhes', line_item %></td>
+        <td><%= link_to 'Editar', edit_line_item_path(line_item) %></td>
+        <td><%= link_to 'Excluir', line_item, method: :delete, data: { confirm: 'Tem certeza que deseja excluir?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Line item', new_line_item_path %>
+<%= link_to 'Novo ítem', new_line_item_path %>
