--- a/depot/app/views/line_items/show.html.erb
+++ b/depot/app/views/line_items/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Product:</strong>
+  <strong>Produtos:</strong>
   <%= @line_item.product %>
 </p>
 
 <p>
-  <strong>Cart:</strong>
+  <strong>Carrinho:</strong>
   <%= @line_item.cart %>
 </p>
 
-<%= link_to 'Edit', edit_line_item_path(@line_item) %> |
-<%= link_to 'Back', line_items_path %>
+<%= link_to 'Editar', edit_line_item_path(@line_item) %> |
+<%= link_to 'Voltar', line_items_path %>
