--- a/depot/app/views/products/_form.html.erb
+++ b/depot/app/views/products/_form.html.erb
@@ -12,28 +12,28 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :titulo%><br>
     <%= f.text_field :title %>
   </div>
   
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :descrição %><br>
     <%= f.text_area :description, rows: 6 %>
   </div>
   
   <div class="field">
-      <%=f.label :image_url %><br>
+      <%= f.label :imagem %><br>
       <%= f.file_field :image_file %>
       <%= f.hidden_field :image_url, :value => :image_url %>
 
   </div>
 
   <div class="field">
-    <%= f.label :price %><br>
+    <%= f.label :preço %><br>
     <%= f.text_field :price %>
   </div>
   
   <div class="actions">
-    <%= f.submit %>
+   <%= f.submit "Adicionar Produto" %>
   </div>
 <% end %>
