--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing products</h1>
+<h1>Produtos</h1>
 
 <table>
 <% @products.each do |product| %>
@@ -13,13 +13,13 @@
       </dl>
     </td>
     <td class="list_actions">
-      <%= button_to 'Show', product, :method => :get %>
-      <%= button_to 'Edit', edit_product_path(product), :method => :get %>
-      <%= button_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= button_to 'Detalhes', product, :method => :get %>
+      <%= button_to 'Editar', edit_product_path(product), :method => :get %>
+      <%= button_to 'Destruir', product, method: :delete, data: { confirm: 'Tem certeza que deseja excluir?' } %>
     </td>
   </tr>
 <% end %>
 </table>
 <br />
 
-<%= button_to 'New Product', new_product_path, :method => :get %>
+<%= button_to 'Novo Produto', new_product_path, :method => :get %>
