--- a/depot/app/assets/stylesheets/application.css.scss
+++ b/depot/app/assets/stylesheets/application.css.scss
@@ -10,69 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  *= require_products
+ *= require_bootstrap
+ *= require_tree .
  */
- 
-#all{
-	width: 800px;
-	margin-left: auto;
-	margin-right: auto;
 
-
-	#banner {
-		background: #9c9;
-		padding: 10px;
-		border-bottom: 2px solid;
-		font: small-caps 40px/40px "Times New Roman", serif;
-		color: #282;
-		text-align: center;
-		
-		img {
-			float: left;
-		}
-	}
-
-	#notice {
-		color: #000 !important;
-		border: 2px solid red;
-		padding: 1em;
-		margin-bottom: 2em;
-		background-color: #f0f0f0;
-		font: bold smaller sans-serif;
-	}
-
-	#main {
-		padding: 1em;
-		background: white;
-	}
-
-	#menu ul {
-	  padding:0px;
-	  margin:0px;
-	  background-color:#EDEDED;
-	  list-style:none;
-	}
-
-	#menu ul li { 
-		display: inline; 
-	}
-
-	#menu ul li a {
-	  padding: 2px 10px;
-	  display: inline-block;
-	   
-	  /* visual do link */
-	  background-color:#EDEDED;
-	  color: #333;
-	  text-decoration: none;
-	  border-bottom:3px solid #EDEDED;
-	}
-
-	#menu ul li a:hover {
-	  background-color:#D6D6D6;
-	  color: #6D6D6D;
-	  border-bottom:3px solid #282;
-	}
-}
