all the  of responsive menu

--- a/depot/app/views/carts/index.html.erb
+++ b/depot/app/views/carts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Carrinhos de Compras</h1>
+<h1>MY SHELVES</h1>
 
 <table>
   <thead>
@@ -21,3 +21,5 @@
 <br>
 
 <%= link_to 'Novo carrinho', new_cart_path %>
+
+<%= button_to 'Voltar', store_path, method: :get %>
