--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -2,14 +2,13 @@
 	<p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Seu Catálogo Pragmático</h1>
 <% cache ['store', Product.latest] do %>
 	<% @products.each do |product| %>
 		<% cache ['entry', product] do %>
 			<div class="entry">
 				<%= image_tag(product.image_url) %>
 				<h3><%= product.title %></h3>
-				<%= sanitize(product.description) %>
+				<p> <%= sanitize(product.description, :class => "description") %></p>
 				
 				<div class="price_line">
 					<span class="price"><%= number_to_currency(product.price) %></span>
