--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
           <h1><%= @page_title || "PRAGMATIC BOOKSHELF" %></h1>
         </div>
 
-        <h2><%=link_to 'CART', carts_path %></h2>
+        <h2><%=link_to(image_tag("cart.png", :size => "50x50"), carts_path) %></h2>
          
                             
       </nav>
