--- a/depot/app/assets/stylesheets/store.css.scss
+++ b/depot/app/assets/stylesheets/store.css.scss
@@ -1,22 +1,31 @@
 .store{
+
 	h1{
 		margin: 0;
 		padding-bottom: 0.5em;
 		font:	150% sans-serif;
-		
+		color: #226;
 	}
 
 	.entry{
+		background-color: white;
 		overflow: auto;
 		margin-top: 1em;
-		border-bottom: 1px dotted #77d;
-		min-height: 100px;
+		padding: 10px;
+		border: 1px none #77d;
+		border-radius: 10px;
+		-webkit-box-shadow: 0px 1px 7px 2px rgba(53, 50, 50, 0.5);
+		-moz-box-shadow:    0px 1px 5px 5px rgba(53, 50, 50, 0.5);
+		box-shadow:         0px 1px 7px 2px rgba(53, 50, 50, 0.5);
+		min-height: 110px;
 
 		img{
 			width: 80px;
+			height: 90px;
 			margin-right: 5px;
 			margin-bottom: 5px;
 			position: absolute;
+			box-shadow: 10px;
 		}
 
 		h3{
@@ -26,6 +35,11 @@
 			margin-top: 0;
 			margin-bottom: 2px;
 			color: #227;
+		}
+
+		p.description{
+			font-size: 40px;
+
 		}
 
 		p, div.price_line{
