--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -5,29 +5,17 @@
 <% cache ['store', Product.latest] do %>
   <% @products.each do |product| %>
     <% cache ['entry', product] do %>
-     
       <div class="entry">
-     
-        <ul>
-     
-          <li class="book_row">
-            <div class="book_image"><%= image_tag(product.image_url) %></div>
-            <div class="book_title" ><h3><%= product.title %></h3></div>
-            <div class="book_desription"><%= sanitize(product.description) %></div>
-     
-            <div class="price_line">
-             
-              <span class="price"><%= number_to_currency(product.price) %></span>
-              <%= button_to 'Adicionar ao Carrinho', line_items_path(product_id: product) %>
-            
-            </div>
-     
-          </li>
-        
-        </ul>
-     
+        <%= image_tag(product.image_url) %>
+        <h3><%= product.title %></h3>
+        <p> <%= sanitize(product.description, :class => "description") %></p>
+
+        <div class="price_line">
+          <span class="price"><%= number_to_currency(product.price) %></span>
+          <%= button_to 'Adicionar ao Carrinho', line_items_path(product_id: product) %>
+        </div>
+
       </div>
-    
     <% end %>
   <% end %>
 <% end %>
