--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -8,12 +8,8 @@
       <!-- Latest compiled and minified  bootsrap CSS-->
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-      <!-- responsive menu styling -->
-     
       <!-- jquery plugin call. (main importance to function) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
-      
-      <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"/>
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -40,7 +36,7 @@
         <nav id="dl-menu" class="dl-menuwrapper">
           <button class="dl-trigger">Menu</button>
             <ul class="dl-menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Contact</a></li>
