changing products forms

--- a/depot/app/views/products/_form.html.erb
+++ b/depot/app/views/products/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title%><br>
+    <%= f.label :name%><br>
     <%= f.text_field :title %>
   </div>
   
@@ -39,6 +39,6 @@
   </div>
 
   <div class="actions">
-   <br><%= f.submit "Adicionar Produto" %>
+   <br><%= f.submit "Add" %>
   </div>
 <% end %>
