--- a/depot/app/views/products/edit.html.erb
+++ b/depot/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editar Produto</h1>
+<h1>EDIT PRODUCT</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Mostrar', @product %> |
-<%= link_to 'Voltar', products_path %>
+<%= link_to 'Show', @product %> |
+<%= link_to 'Back', products_path %>
