--- a/depot/app/views/products/show.html.erb
+++ b/depot/app/views/products/show.html.erb
@@ -1,24 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Titulo:</strong>
-  <%= @product.title %>
-</p>
+<div id="title">
+  <h2><%= @product.title %><h2>
+</div>
 
-<p>
-  <strong>Descrição:</strong>
+<div id="desrciption">
   <%= @product.description %>
-</p>
+</div>
 
 <p>
-  <strong>Imagem:</strong>
-  <%= @product.image_url %>
+	<strong>Category: </strong><%= @product.category %>
 </p>
 
-<p>
-  <strong>Preço:</strong>
-  <%= @product.price %>
-</p>
-
-<%= link_to 'Editar', edit_product_path(@product) %> |
-<%= link_to 'Voltar', products_path %>
+<div><%=image_tag(@product.image_url)%></div>
+  
+<strong><%= number_to_currency(@product.price) %></strong>
+	
+<%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Back', products_path %>
