--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -1,25 +1,22 @@
-<h1>PRODUCTS</h1>
+<h1>BOEKEN</h1>
 
-<table>
+<div id="products-holder">
 <% @products.each do |product| %>
-  <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-    <td>
-      <%= image_tag(product.image_url, class: 'list_image') %>
-    </td>
-    <td class="list_description">
-      <dl>
-        <dt><%= product.title %></dt>
-        <dd><%= truncate(strip_tags(product.description), length: 80) %></dd>
-      </dl>
-    </td>
-    <td class="list_actions">
-      <%= button_to 'Detalhes', product, :method => :get %>
-      <%= button_to 'Editar', edit_product_path(product), :method => :get %>
-      <%= button_to 'Destruir', product, method: :delete, data: { confirm: 'Tem certeza que deseja excluir?' } %>
-    </td>
-  </tr>
+
+  <div class="list-line-holder">
+
+    <div class ="image-holder">
+      <%= link_to(image_tag(product.image_url, class: 'list_image'), product) %>
+    </div>
+    
+    <div class="list-actions">
+      <%= link_to 'Edit', edit_product_path(product), :class => "btn btn-primary btn-xs"%>
+      <%= link_to 'Destroy', product, :class => "btn btn-danger btn-xs", method: :delete, data: { confirm: 'Tem certeza que deseja excluir?'} %>
+    </div>
+  
+  </div>
 <% end %>
-</table>
+</div>
 <br />
 
-<%= button_to 'Novo Produto', new_product_path, :method => :get %>
+<%= button_to 'Novo Produto', new_product_path, :method => :get, :class => "btn btn-info"%>
