--- a/depot/app/assets/stylesheets/products.css.scss
+++ b/depot/app/assets/stylesheets/products.css.scss
@@ -4,6 +4,7 @@ h1{
 }
 
 #products-holder {
+  /* Displays all elements spaced evenly and wrapps the self content in a flexible way*/
   display: flex;
   flex-flow: row-wrap;
   align-content: space-between;
@@ -12,7 +13,7 @@ h1{
     margin-right: 5%;
     /* Pseudo-selectors for removing the margin-right
     from every 3n+3 element */
-    :nth-child(4n+4) { margin-right: 0;}
+    :nth-child(5n+5) { margin-right: 0;}
    
     .image-holder {
       -webkit-box-shadow: 0px 0px 11px 1px rgba(50, 50, 50, 0.53);
