--- a/depot/app/assets/stylesheets/products.css.scss
+++ b/depot/app/assets/stylesheets/products.css.scss
@@ -6,15 +6,18 @@ h1{
 #products-holder {
     /* Displays all elements spaced evenly and wrapps the self content in a flexible way*/
     display: flex;
+    /* break the lines, not trying to wrap all elements in a unique row*/
     flex-wrap: wrap;
     flex-flow: row-wrap; 
     align-content: space-between;
   .list-line-holder{
     margin-right: 1%;
     margin-bottom: 2%;
-    /* Pseudo-selectors for removing the margin-right
-    from every 3n+3 element */
-    :nth-child(5n+5) { margin-right: 0;}
+    /*  
+      Pseudo-selectors for removing the margin-right
+      from every 3n+3 element 
+      :nth-child(5n+5) { margin-right: 0;} 
+    */
    
     .image-holder {
       -webkit-box-shadow: 0px 0px 11px 1px rgba(50, 50, 50, 0.53);
