--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <header class="top">
         <!-- cart -->
         <div class="right">
-          <%=link_to(image_tag("cart.png", :size => "75x75"), carts_path, :class => "cart") %>
+          <%=link_to(image_tag("cart.png", :size => "75x75"), cart_path(session[:cart_id]), :class => "cart") %>
         </div>
         <!-- main title -->      
         <h1 id="main-title"><%= @page_title || "boekenwinkel" %></h1>
