alteracao no metodo destroy de product. alert bootstrap style cart styling. line_item new methods

--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 
       <!-- jquery plugin call. (main importance to function) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
-
+      
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+      
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
       
@@ -39,7 +39,7 @@
 
                 <li><a href="/">Home</a></li>
                 <li><a href="#">News</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="/products">Products</a></li>
                 <li><a href="#">Contact</a></li>
              </ul>
         </nav>
