--- a/depot/app/assets/stylesheets/products.css.scss
+++ b/depot/app/assets/stylesheets/products.css.scss
@@ -26,6 +26,8 @@ from every 3n+3 element
     }
     
     .list-actions{
+      display: flex;
+      justify-content: center;
       padding-top: 5%;
       text-align: center;
     }
