--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -10,8 +10,8 @@
     </div>
     
     <div class="list-actions">
-      <%= link_to 'Edit', edit_product_path(product), :class => "btn btn-primary btn-xs"%>
-      <%= link_to 'Destroy', product, :class => "btn btn-danger btn-xs", method: :delete, data: { confirm: 'Tem certeza que deseja excluir?'} %>
+      <%= button_to 'Edit', edit_product_path(product), :class => "btn btn-primary btn-xs"%>
+      <%= button_to 'Destroy', product, :class => "btn btn-danger btn-xs", method: :delete, :confirm => "Tem certeza que deseja excluir?" %>
     </div>
   
   </div>
