--- a/depot/app/views/line_items/_line_item.html.erb
+++ b/depot/app/views/line_items/_line_item.html.erb
@@ -1,6 +1,20 @@
-<!-- Partial for line items to be rendered in a cart-->
+<!-- Partial for line items to be rendered in the cart's partial-->
 <tr>
-	<td><%= line_item.quantity %>&times;</td>
 	<td><%= line_item.product.title %></td>
+	<td class="item_price"><%= number_to_currency(line_item.price) %></td>
+	<td><%= line_item.quantity %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
+	<td>
+		<div id="buttons">
+			<%= button_to add_line_item_path(line_item.id), {remote: true, method: :patch, class: "btn btn-lg"} do %>
+				<i class="glyphicon glyphicon-plus"></i>
+				<% end %>
+			 <%= button_to remove_line_item_path(line_item.id), {remote: true, method: :patch, class: "btn btn-lg"} do %>
+				<i class="glyphicon glyphicon-minus"></i>
+			<% end %>
+		</div>
+	</td>	
 </tr>
+
+
+		  		
