--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -1,21 +1,27 @@
 <% if notice %>
-  <p id="notice"><%= notice %></p>
+  <p id="notice" class="alert alert-danger"><%= notice %></p>
 <% end %>
+<div class="store">
+  <div id="cart">
+    <%= render @cart %>
+  </div>
+  <% cache ['store', Product.latest] do %>
+    <% @products.each do |product| %>
+      <% cache ['entry', product] do %>
+        <div class="entry">
+          <%= image_tag(product.image_url) %>
+          <h3><%= product.title %></h3>
+          <p> <%= sanitize(product.description, :class => "description") %></p>
 
-<% cache ['store', Product.latest] do %>
-  <% @products.each do |product| %>
-    <% cache ['entry', product] do %>
-      <div class="entry">
-        <%= image_tag(product.image_url) %>
-        <h3><%= product.title %></h3>
-        <p> <%= sanitize(product.description, :class => "description") %></p>
+          <div class="price_line">
+            <span class="price"><%= number_to_currency(product.price) %></span>
+            <%= button_to line_items_path(product_id: product), {remote: true, class: "btn btn-lg"} do%>
+              <i class="glyphicon glyphicon-shopping-cart"></i>
+            <% end %>
+          </div>
 
-        <div class="price_line">
-          <span class="price"><%= number_to_currency(product.price) %></span>
-          <%= button_to 'Add to cart', line_items_path(product_id: product), :class => "btn btn-success btn-sm" %>
         </div>
-
-      </div>
+      <% end %>
     <% end %>
   <% end %>
-<% end %>
+</div>
