layout changes and f2 implementation

--- a/depot/app/assets/stylesheets/layout.css.scss
+++ b/depot/app/assets/stylesheets/layout.css.scss
@@ -11,7 +11,7 @@ body {
 				float: left;
 			}
 
-			background: #a63437 no-repeat fixed center 0;
+			background: #2E4573 no-repeat fixed center 0;
 			height: 90px;
 			position: relative;
 			top: 0;
