--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -12,14 +12,10 @@
           <%= image_tag(product.image_url) %>
           <h3><%= product.title %></h3>
           <p> <%= sanitize(product.description, :class => "description") %></p>
-
           <div class="price_line">
-            <span class="price"><%= number_to_currency(product.price) %></span>
-            <%= button_to line_items_path(product_id: product), {remote: true, class: "btn btn-lg"} do%>
-              <i class="glyphicon glyphicon-shopping-cart"></i>
-            <% end %>
+           <span class="price"><%= number_to_currency(product.price) %></span>
+           <%= button_to 'Add to cart', line_items_path(product_id: product), remote: true, :class => "btn btn-success btn-sm" %>
           </div>
-
         </div>
       <% end %>
     <% end %>
