fixing cart layout

--- a/depot/app/assets/stylesheets/show_cart.css.scss
+++ b/depot/app/assets/stylesheets/show_cart.css.scss
@@ -1,10 +1,10 @@
-#table th, td {   
+.table th, td {   
 	vertical-align: center;
 	text-align: center;
 
 }
 
-#buttons button { 
+.buttons button { 
 		display: inline;  
 		float: left;
 		//margin-right: 22px;
