--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -2,16 +2,14 @@
 <html>
   <head>
     <title>Depot</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <!-- Latest compiled and minified  bootstrap CSS-->
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-         
-      <!-- Latest compiled and minified  bootsrap CSS-->
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
       <!-- jquery plugin call. (main importance to function) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
-      
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
