partial layout for application.html.erb

--- a/depot/app/assets/stylesheets/layout.css.scss
+++ b/depot/app/assets/stylesheets/layout.css.scss
@@ -1,15 +1,12 @@
 body {
   
+  padding-top: 50px;
   margin: 0 auto;
 
 	.all{
 		background-color: #FFFCFC;
 
 		header{
-
-			.cart{
-				float: left;
-			}
 
 			background: #2E4573 no-repeat fixed center 0;
 			height: 90px;
