--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -19,34 +19,40 @@
   <body class='<%= controller.controller_name %>'>
  
     <div class="all"> 
-      <header class="top">
-        <!-- cart -->
-        <div class="right">
-          <%=link_to(image_tag("cart.png", :size => "75x75"), cart_path(session[:cart_id]), :class => "cart") %>
-        </div>
-        <!-- main title -->      
-        <h1 id="main-title"><%= @page_title || "boekenwinkel" %></h1>
-          
-      </header>
-        
-      <div id="options">
-        <!-- /dl-menuwrapper -->
-        <nav id="dl-menu" class="dl-menuwrapper">
-          <button class="dl-trigger">Menu</button>
-            <ul class="dl-menu">
 
-                <li><a href="/">Home</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="/products">Products</a></li>
-                <li><a href="#">Contact</a></li>
-             </ul>
-        </nav>
-        
-      </div>        
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">boekenwinkel</a>
+          </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/products">products</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right nav-pills nav-stacked">
+            <li class="active">
+              <a href="/carts/<%=session[:cart_id] %>">
+                <span class="badge pull-right">42</span>
+                Cart
+              </a>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->   
+    </div>        
       
-      <div id="main">
-        <%= yield %>
-      </div>
+    <div id="main">
+      <%= yield %>
+    </div>
 
     </div>
     
