--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -1,5 +1,8 @@
-<div id="partial_cart" class="alert alert-info" >
-	<p id='quantity'>
-	<%= cart.total_quantity %> Books |
-	<%= @cart.total_price %></p>
-</div>
+<ul class="nav navbar-nav navbar-right nav-pills nav-stacked">
+  <li class="active">
+    <a href="/carts/<%=session[:cart_id] %>">
+      <span class="badge pull-right"><%= number_to_currency(@cart.total_price) %> </span>
+      There are <%= cart.total_quantity %> books in your cart.
+    </a>
+  </li>
+</ul>
