--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -38,14 +38,9 @@
           <ul class="nav navbar-nav">
             <li><a href="/products">products</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right nav-pills nav-stacked">
-            <li class="active">
-              <a href="/carts/<%=session[:cart_id] %>">
-                <span class="badge pull-right">42</span>
-                Cart
-              </a>
-            </li>
-          </ul>
+          <div id="cart">
+            <%= render @cart %>
+          </div>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->   
     </div>        
