--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -3,13 +3,15 @@
   <head>
     <title>Depot</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <!-- Latest compiled and minified  bootstrap CSS-->
+
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+      
+      <!-- Latest compiled and minified bootstrap CSS-->
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
-      <!-- jquery plugin call. (main importance to function) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
       
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
@@ -24,12 +26,6 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
             <a class="navbar-brand" href="/">boekenwinkel</a>
           </div>
 
