--- a/depot/app/views/line_items/create.js.erb
+++ b/depot/app/views/line_items/create.js.erb
@@ -1,1 +1,2 @@
 $('#cart').html("<%= escape_javascript render(@cart) %>");
+$('#cart ul li a').css({'color':'#88ff88'}).animate({'color':'#fff'}, 1500);
