hide cart if its empty

--- a/depot/app/assets/stylesheets/store.css.scss
+++ b/depot/app/assets/stylesheets/store.css.scss
@@ -11,7 +11,7 @@
 		min-height: 150px;
 		background-color: white;
 		overflow: auto;
-		margin-top: 1em;
+		margin: 1em;
 		padding: 10px;
 		border: 1px none #77d;
 		border-radius: 10px;
