--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -4,16 +4,16 @@
     <title>Depot</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+      
       <!-- Latest compiled and minified JavaScript -->
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-      
       <!-- Latest compiled and minified bootstrap CSS-->
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       
-      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
       
-      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
       
   </head>
@@ -34,9 +34,9 @@
           <ul class="nav navbar-nav">
             <li><a href="/products">products</a></li>
           </ul>
-          <div id="cart">
-            <%= render @cart %>
-          </div>
+            <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+              <%= render @cart %>
+            <% end %>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->   
     </div>        
