--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -34,12 +34,14 @@
           <ul class="nav navbar-nav">
             <li><a href="/products">products</a></li>
           </ul>
+          <% if @cart %>
             <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
               <%= render @cart %>
             <% end %>
+          <% end %>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->   
-    </div>        
+    </nav>        
       
     <div id="main">
       <%= yield %>
